# ocaml-nix-starter

./: .gitignore  Makefile  README.md  dune-project  hello.opam  shell.nix
.github/workflows/: test.yaml
lib/: Message.ml  Message.mli  dune
test/: dune  hello.ml
